--- a/_posts/2019-12-28-the-us-narrative-today.html
+++ b/_posts/2019-12-28-the-us-narrative-today.html
@@ -1513,107 +1513,107 @@ stories:
   domain: http://www.argusobserver.com/
   link: https://www.argusobserver.com/national/news/blackwell-uses-gumballs-to-portray-trump-s-false-claims/video_675699c7-21c1-519d-8820-44a49e77f5df.html
 images:
-- name: old-door-lock-old-door-lock-2-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-smoking-cigarette.jpg
-- name: cyber-api-description-wars-img-1910.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cyber-api-description-wars-img-1910.jpg
-- name: crow_aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_aqua.jpg
-- name: old-school-house-old-schoolhouse-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-ww2-dresden.jpg
-- name: downtown-trucksilo-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-cinnamon-rolls.jpg
-- name: copper-circuit-hallway-mirrors-hotel.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-hallway-mirrors-hotel.jpg
-- name: fence-fence-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-space-pizza.jpg
-- name: bluelake-colorful-blocks-file-00-00-38-67.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-colorful-blocks-file-00-00-38-67.jpg
-- name: power-lines-power-lines-empty-space-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-cinnamon-rolls.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-diego-rivera1.jpg
-- name: white-house-lawn-white-house-window-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-purple-storm.jpg
-- name: ellis-island-ellisisland-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-colorful-dream.jpg
-- name: amusement-park-amusement-park-2-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-emily-carr.jpg
-- name: oldcabin-oldcabin-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-deep-connections.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-free-woman.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-free-woman.png
+- name: castle-wall-DSC-0067-umberto-bocc.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-umberto-bocc.JPG
+- name: curtain-curtain-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-graham-sutherland.jpg
+- name: nazi-invasion-old-building-and-cars_36680898846_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-old-building-and-cars_36680898846_o.jpg
+- name: server-cloud-server-racks-clouds-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-dali-three.jpg
+- name: abandonedbuildings_cinnamon_rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_cinnamon_rolls.jpg
+- name: downtheline-downtheline-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-dark-rain.jpg
+- name: old-granary-field-oldhouse-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-matrix.jpg
+- name: machine-road-machine-road-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-atari-asteroids.jpg
+- name: stalin-time-butterfly-on-flower.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-butterfly-on-flower.jpg
+- name: miamibeach-miamibeach-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-sand-paper.jpg
+- name: bf-skinner-dinosaur-walking-desert.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-dinosaur-walking-desert.jpg
+- name: locked-up-steam-lock-up-steam-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-dark-soul.jpg
+- name: oldhouse-granaryfield-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-rainbow-festival.jpg
+- name: copper-circuit-white-house-press-room-flag.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-white-house-press-room-flag.jpg
+- name: yosemite-yosemite-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-blue-brush.jpg
+- name: oldhouse-oldhouse-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-clean-view.jpg
+- name: berlinwall-DSC-0084-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-alberto-giacometti.jpg
+- name: gears-4882162452-fa3126b38d-b-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-clean-view.jpg
+- name: windowmountain-window-mountain-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-deep-connections.jpg
+- name: la-muse-concert-hall-bright-lights.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-concert-hall-bright-lights.jpg
+- name: old-gas-pumps-oldgaspumps-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-blue-electricity.jpg
+- name: white-house-lawn-white-house-window-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-matrix.jpg
+- name: copper-circuit-nyc-streets-laundromat.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-nyc-streets-laundromat.jpg
+- name: old-door-lock-old-door-lock-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-purple-pond.jpg
+- name: beach-clouds-lifeguard-beachclouds-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-ww2-color.jpg
+- name: locked-up-steam-lock-up-steam-jap-wav-pr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-jap-wav-pr.jpg
+- name: old-door-lock-old-door-lock-2-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-sunday.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-atari-asteroids.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-atari-asteroids.png
+- name: downtheline-downtheline-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-kand-two.jpg
+- name: nazi-invasion-DSC_0033.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-DSC_0033.jpg
+- name: border-crossing-bordercrossing-diego-rivera1.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-diego-rivera1.png
+- name: docks-docks-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-sunday.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-purple-storm.jpg
+- name: aws-s3-deserthills-deserthills-still.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-deserthills-deserthills-still.jpg
+- name: gypsymosaic-gypsy-eyes-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-hot-spicy.jpg
+- name: crow_pablo_blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_pablo_blue.jpg
+- name: berlinwall-DSC-0084-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-light-dali.jpg
+- name: downtown-los-angeles-downtown-la-free-woman.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-free-woman.JPG
+- name: meadowbutterfly-meadow-butterfly-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-kand-two.jpg
+- name: razorcliff-razorcliff-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-blue-electricity.jpg
 - name: oldcabin-store-emily-carr.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-emily-carr.jpg
-- name: miamibeach-miamibeach-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-graham-sutherland.jpg
-- name: adam-smith-adam-smith-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-clean-view.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-dry-skin.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-dry-skin.png
-- name: old-cabin-oldcabin-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-graham-sutherland.jpg
-- name: yosemite-yosemite-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-aqua.jpg
-- name: school-clouds-church-clouds-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-atari-missle.jpg
-- name: crow_wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_wols.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-feed-people.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-feed-people.jpg
-- name: status-berlin-status-berlin-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-alien-goggles.jpg
-- name: old-school-house-old-schoolhouse-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-matrix.jpg
-- name: aws-s3-desertrun-desertrun-still-600.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-desertrun-desertrun-still-600.jpg
-- name: blossombar-crafty-painting-file-00-00-50-38.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crafty-painting-file-00-00-50-38.jpg
-- name: store-on-corner-store-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-bright-sand.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-smoking-cigarette.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-smoking-cigarette.png
-- name: cargo-ship-cargo-ship-on-sea-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-purple-pond.jpg
-- name: bluelake-gred-mash-file-00-01-17-38.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-gred-mash-file-00-01-17-38.jpg
-- name: statue-of-liberty-front-view-statueofliberty-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-atari-asteroids.jpg
-- name: aws-s3-stories-cargo-ship-on-sea-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-cargo-ship-on-sea-diego-rivera1.jpg
-- name: nazi-invasion-city-clouds-building-crowded.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-city-clouds-building-crowded.jpg
-- name: christianity-christianity-under-construction-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-neo-instinct.jpg
-- name: cargo-ship-cargo-ship-on-sea-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-blue-electricity.jpg
-- name: carry-load-carryload-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-dark-dali.jpg
-- name: la-muse-hallway-long-hospital.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-hallway-long-hospital.jpg
-- name: white-house-lawn-white-house-lawn-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-blue-granite.jpg
-- name: beach-rocks-beach-rocks-currents-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-hot-spicy.jpg
-- name: copper-circuit-old-building-barcelona-waterfront.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-old-building-barcelona-waterfront.jpg
-- name: window-window-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-gan-vogh.jpg
-- name: oldhouse-granaryfield-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-nazi-poster.jpg
-- name: oldcabin-oldcabin-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-alien-goggles.jpg
-- name: oldtrain-oldtrain-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-dali-three.jpg
-- name: bf-skinner-cruise-ship-shore-log.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-cruise-ship-shore-log.jpg
-- name: catacombs-catacombs-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-kandinsky-bv.jpg
-- name: crow_gred_mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_gred_mash.jpg
-- name: rockingchair-rockingchair-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-diego-rivera1.jpg
-- name: cargo-ship-cargo-ship-on-sea-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-diego-rivera1.jpg
-- name: oldhotel-oldhotel-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-marcel-duchamp.jpg
+- name: lincoln-memorial-lincolnmemorial-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-purple-pond.jpg
+- name: walled-garden-walled-garden-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-internet-numbers.jpg
+- name: berlinwall-DSC-0084-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-nazi-poster.jpg
+- name: mistywoods-babyfoot-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-purp-paper.jpg
+- name: oldbarn-oldbarn-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-purple-storm.jpg
+- name: copper-circuit-statue-of-liberty-front-bright.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-statue-of-liberty-front-bright.jpg
+- name: bluelake-crunch-paper-file-00-01-17-38.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-crunch-paper-file-00-01-17-38.jpg
+- name: stalin-time-gauge-on-aircraft-carrier.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-gauge-on-aircraft-carrier.jpg
+- name: amusement-park-amusement-park-2-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-copper-circuit.jpg
 ---
 Cougar Attacks Dog Near Hailey.&nbsp;Watch How Baker Turns Pizza Into Art.&nbsp;Sons Of The American Revolution.&nbsp;Thousands Of Koalas Feared Dead In Australia Wildfires.&nbsp;Lady Titans Hammer Madison, Advance To Finals.&nbsp;Shaping The Quantum Future.&nbsp;Miami Hurricanes Continue To Embarrass Themselves In Shutout Against Louisiana Tech.&nbsp;Blind Bowler From New York.&nbsp;
